// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PHeader > renders with as correctly 1`] = `
"<section data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</section>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with body slot correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with bottom slot correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>Bottom slot
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with class correctly 1`] = `
"<header class="border-b-0" data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with content slot correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with default slot correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center">Default slot</div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with left slot correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if-->Left slot
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with mode dialog correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Close menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" class="" data-pohon="dialog-overlay"></div>
<div data-dismissable-layer="" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-pohon="dialog-content" tabindex="-1" style="pointer-events: auto;"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0">header.title</h2><p id="akar-dialog-description-v-1">header.description</p></span>
  <div class="" data-pohon="header-header">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Close menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
  <div class="" data-pohon="header-body"></div>
</div>


<!--teleport end-->"
`;

exports[`PHeader > renders with mode drawer correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Close menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0">header.title</h2><p id="akar-dialog-description-v-1">header.description</p></span>
  <!--v-if-->
  <div class="" data-pohon="header-body"></div>
</div>


<!--teleport end-->"
`;

exports[`PHeader > renders with mode slideover correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Close menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" class="" data-pohon="slideover-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-side="right" data-pohon="slideover-content" tabindex="-1"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0">header.title</h2><p id="akar-dialog-description-v-1">header.description</p></span>
  <div class="" data-pohon="header-header">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Close menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
  <div class="" data-pohon="header-body"></div>
</div>


<!--teleport end-->"
`;

exports[`PHeader > renders with pohon correctly 1`] = `
"<header data-pohon="header-root">
  <div class="gap-1.5" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with right slot correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right">Right slot<button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with title correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Documentation" data-pohon="header-title" class="">Documentation</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with title slot correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Title slot" data-pohon="header-title" class="">Title slot</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with to correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/docs" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with toggle correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with toggle slot correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right">Toggle slot</div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with toggleSide correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a></div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right">
      <!--v-if-->
    </div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders with top slot correctly 1`] = `
"<header data-pohon="header-root">Top slot<div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right"><button type="button" aria-label="Open menu" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`PHeader > renders without toggle correctly 1`] = `
"<header data-pohon="header-root">
  <div class="" data-pohon="header-container">
    <div class="" data-pohon="header-left">
      <!--v-if--><a href="/" aria-label="Pohon" data-pohon="header-title" class="">Pohon</a>
    </div>
    <div class="" data-pohon="header-center"></div>
    <div class="" data-pohon="header-right">
      <!--v-if-->
    </div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;
